# SimplePicCut

./: CMakeLists.txt
src/: CMakeLists.txt
src/core/: CMakeLists.txt  main.cpp
src/gui/: CMakeLists.txt  mainui.cpp  mainui.h  mainui.ui  picgraphicsview.cpp  picgraphicsview.h
src/include/: CMakeLists.txt  defines.h
src/resource/: CMakeLists.txt  pic.qrc
src/util/: CMakeLists.txt  titlebar.cpp  titlebar.h
